Coup de Karcher n°1

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -73,9 +73,9 @@
 
 \section{Introduction}
 
-Cela fait à peine 50 ans que la communauté scientifique a adopté la tectonique des plaques, et malgré de nombreuses recherches, la géologie, discipline encore relativement fragmentaire, est une science assez jeune comparée à la physique et aux mathématiques et qui connaît encore de nombreux points sombres, ignorant toujours la structure profonde de notre manteau.
+Cela fait à peine 50 ans que la communauté scientifique a adopté la tectonique des plaques, et malgré de nombreuses recherches, la géologie, discipline encore relativement fragmentaire, est une science assez jeune comparée à la physique et aux mathématiques et qui connaît encore de nombreux points sombres, ignorant toujours la structure profonde de notre manteau. \\
 Cependant, nous (Alexis Gros, Tristan Porteries et Thibaut Manceau) pensons qu'il serait intéressant de faire l'état de l'art en ce qui concerne la simulation d'un paysage géomorphologique de façon réaliste.
-En effet, cette simulation pourrait grandement aider à l'obtention de nouvelles connaissances sur la géomorphologie, sans compter tous les autres débouchés où elle pourrait remplacer des générateurs de terrains souvent trop peu réalistes.
+En effet, cette simulation pourrait grandement aider à l'obtention de nouvelles connaissances sur la géomorphologie, sans compter tous les autres débouchés où elle pourrait remplacer des générateurs de terrains souvent trop peu réalistes. \\
 Vous serez ainsi informés dans le présent document de la synthèse de nos recherches sur ce sujet aussi vaste que passionnant, nous ayant donné l'occasion de balayer de nombreux champs de la sciences tels que la chimie moléculaire, la mécanique des fluides ou encore le magnétisme.
 
 \section{Les principes géomorphologiques}
@@ -388,15 +388,17 @@ Où $v$ représente la vitesse de sédimentation, $\mu$ la viscosité du fluide,
 
 \subsubsection{La tectonique des plaques}
 
-Imaginée par Wagner au $19$ siècle, redécouverte dans les années 50 pour n'être qu'unanimement acceptée que dix ans plus tard, la théorie des plaques signe le véritable commencement de la géologie en tant que science, changeant totalement notre vision de la terre et de ses cycles. \\
-La tectonique des plaques propose que l'écorce terrestre soit formée d'un certain nombre de plaques qui se déplacent les unes par rapport aux autres à la faveur des mouvements internes du manteau terrestre qui reste, encore de nos jours, bien mystérieux (notamment en ce qui concerne les points chauds). \\
-La mécanique de la terre, qui est à la source de tous ces effets géomorphologiques visibles, est en fait le résultat d'un long refroidissement qui commença il y a 4,6 milliards d'années et qui se poursuit encore aujourd'hui. Toutefois, la désintégration des matériaux radioactifs ralentissent considérablement la durée de refroidissement de la terre. \\
-Cette mécanique de refroidissement met en place des mécanismes réguliers, notamment ceux de la fermeture et de l'ouverture des océans, causes majeures de la plupart des mouvements à la surface de la terre, et par la même occasion principal vecteur du refroidissement du manteau via les dorsales océaniques. \\
+Imaginée par Wagner au $19$ siècle, redécouverte dans les années 50 pour n'être qu'unanimement acceptée dix ans plus tard, la théorie des plaques signe le véritable commencement de la géologie en tant que science, changeant totalement notre vision de la terre et de ses cycles. \\
+La tectonique des plaques propose que l'écorce terrestre soit formée de plaques qui se déplaceraient les unes par rapport aux autres à la faveur des mouvements internes du manteau terrestre. Ce même manteau qui, encore de nos jours, reste bien mystérieux (notamment en ce qui concerne les points chauds). \\
+\\
+La mécanique de la terre, qui est à la source de tous les effets géomorphologiques visibles, est en fait le résultat d'un long refroidissement qui commença il y a 4,6 milliards d'années et qui se poursuit encore aujourd'hui.\\
+Cette mécanique de refroidissement met en place d'autres mécanismes comme ceux de la fermeture et de l'ouverture des océans, causes majeures de la plupart des mouvements à la surface de la terre.
 
 \subsection{La subduction}
 
-La subduction désigne la plongée d'une plaque sous une autre (voir figure), ces plaques sont dites lithosphériques (car possédant une lithosphère, pour simplifier, une partie solide séparée de l'asthénosphère par la limite dite du moho), elles sont portées par l'asthénosphère, la partie « manteau » des plaques.
-Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomène orogéniques sont visibles à la surface, ou via des séismes fréquents, créant dans le même temps une chaîne de montagne. De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et des traces de subductions se trouvent aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
+La subduction désigne la plongée d'une plaque sous une autre (voir figure ci-dessous). Ces plaques sont dites lithosphériques (car possédant une lithosphère, pour simplifier, une partie solide séparée de l'asthénosphère par le moho). Elles sont portées par l'asthénosphère, la partie « manteau » des plaques. \\
+Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomène orogéniques sont visibles à la surface. Par exemple, des séismes fréquents qui créent une chaîne de montagne. \\
+De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et des traces de subductions se trouvent aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
 
 \begin{center}
   \includegraphics[width=8cm]{Images/subduction.png}
