--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -407,11 +407,12 @@ De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Ande
 
 \subsubsection{L'histoire de la chaîne alpine}
 
-Le début de l'histoire de la chaîne alpine commence peu après -256 Ma. A cette époque, le paléoocéan Thétys occupait la majorité de la surface terrestre, et les contraintes du manteau terrestre amorçèrent un soulèvement d'une zone de la plaque alpine, préfigurant une dorsale océanique.
+Le début de l'histoire de la chaîne alpine commence peu après -256 Ma. À cette époque, le paléoocéan Thétys occupait la majorité de la surface terrestre. \\
+Les contraintes du manteau terrestre amorcèrent alors le soulèvement d'une zone de la plaque alpine, préfigurant une dorsale océanique.
 \begin{itemize}
-  \item - 200 Ma, trias~: Ouverture de l'océan alpin ;
-  La dorsale est pleinement ouverte et déverse son  magma dans l'océan alpin, ce qui a pour effet de l'élargir ;
-  A son apogée, l'océan Alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m ;
+  \item - 200 Ma, trias~: ouverture de l'océan alpin.\\
+  La dorsale est pleinement ouverte et déverse son  magma dans l'océan alpin, ce qui a pour effet de l'élargir.
+  A son apogée, l'océan Alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m. ;
   \item - 140 Ma, crétacé inférieur~: début de la compression de l'océan alpin suite à des contraintes externes telles que le rapprochement de la plaque Africaine ;
   \item Fin du crétacé inférieur, subduction du coté de la plaque africaine ;
   \item Nouvelle océanisation dans « la zone valaisaine » (nouvelle dorsale typique des océans en fin de vie) ;
