--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -412,62 +412,61 @@ Les contraintes du manteau terrestre amorcèrent alors le soulèvement d'une zon
 \begin{itemize}
   \item - 200 Ma, trias~: ouverture de l'océan alpin.\\
   La dorsale est pleinement ouverte et déverse son  magma dans l'océan alpin, ce qui a pour effet de l'élargir.
-  A son apogée, l'océan Alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m. ;
+  A son apogée, l'océan Alpin fut large de 300 à 1000 km, et profond de 3500 à 4000 m ;
   \item - 140 Ma, crétacé inférieur~: début de la compression de l'océan alpin suite à des contraintes externes telles que le rapprochement de la plaque Africaine ;
   \item Fin du crétacé inférieur, subduction du coté de la plaque africaine ;
   \item Nouvelle océanisation dans « la zone valaisaine » (nouvelle dorsale typique des océans en fin de vie) ;
-  \item Crétacé supérieur~: Fin de l'océan alpin, qui est considérablement réduit, et commencement de la mer alpine, reliée à l'océan atlantique en formation. Océan valaisin totalement refermé ;
-  \item (-65 Ma, paléocène) Sous l'effet des contraintes, émersion de la plate-forme continentale au delà de la « zone valaisaine ».
+  \item Crétacé supérieur~: fin de l'océan alpin, qui est considérablement réduit, et commencement de la mer alpine, reliée à l'océan atlantique en formation. L'océan valaisin est, pour sa part, totalement refermé ;
+  \item -65 Ma, paléocène~: Sous l'effet des contraintes, émersion de la plate-forme continentale au delà de la « zone valaisaine ».
   Début de la formation des alpes avec la poursuite de la compression.
   La zone du massif du mont blanc passe sous la zone d'obduction majoritaire pour ressurgir plus tard à sa place actuelle ;
   \item Oligocène~: Écaillage important des couches ;
-  \item - 23 Ma~: Néogène, création du jura au devant des alpes par effet collatéral de compression ;
+  \item - 23 Ma~: néogène, création du jura au devant des alpes par effet collatéral de compression ;
   Soulèvement du massif du Mt Blanc, ce qui pousse la partie calcaire des Alpes à glisser par gravité ;
-  \item Pliocène~: Séparation de la partie calcaire des alpes et pré-alpes (Jura, Chartreuse, Vercors) du reste, désormais essentiellement granitique, par glissement de la partie supérieur calcaire qui s'éloigne de la zone de surrection du Mont blanc.
-  C'est à ce moment qu'est atteint le pic d'intensité dans la formation des alpes ;
-  \item Plus récemment, dans la dernière centaine de millier d'années passée, les nombreuses ères glacières successives ont totalement refaçonnés le massif des alpes, et c'est cette époque qui reste malgré son âge assez faible la plus décisive dans le façonnage des massifs alpins.
-  Le glacier du Rhône tout particulièrement, assez titanesque creuse un immense sillon qui laissera place notamment au Lac Leman.
+  \item Pliocène~: séparation de la partie calcaire des alpes et pré-alpes (Jura, Chartreuse, Vercors) du reste, désormais essentiellement granitique). Cette séparation se produit par glissement de la partie supérieur calcaire qui s'éloigne de la zone de surrection du Mont blanc.
+  C'est à ce moment qu'est atteint le pic d'intensité dans la formation des alpes.
 \end{itemize}
-
-\subsection{Dynamique des roches}
-	
-Il faut savoir à propos des roches en géologie que les physiciens ont grandement fait avancer la géologie moderne à leur sujet, car la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme des déformations à petite échelle.
-Car les roches, bien qu'usuellement cassantes et rigides, peuvent devenir plus ductiles sous certaines conditions. \\
+Plus récemment, dans les dernières centaine de milliers d'années, les nombreuses ères glacières successives ont totalement refaçonnées le massif des alpes, et c'est cette époque qui reste malgré son âge assez faible la plus décisive dans le façonnage des massifs alpins.
+  Le glacier du Rhône tout particulièrement, assez titanesque, a creusé un immense sillon qui laissera place notamment au Lac Léman.
 
 \subsubsection{Le temps}
 
-En effet, le temps est l'élément fondamental de la géologie car les roches les plus dures, soumises à une force puissante dans le même sens pendant plusieurs dizaines de milliers d'années se déformera comme de la pâte à modeler (pâte souvent utilisée dans les modélisations géologiques à petite échelle).
-Car sur les échelles immenses des temps géologiques, n'importe quel matériaux se comportera comme s'il était mou, allant jusqu'à former des tourbillons de matière suite à un grand cisaillement en profondeur.
-Une montagne, sous certaines conditions, peut se transformer en colline en seulement quelques millions d'années.
-Par ailleurs, il est important de savoir que la cause de la subduction est en fait la principale conséquence de la « mort des océans ».
-En effet, la lithosphère océanique est plus dense que la croûte continentale et se refroidis, donc s'alourdit lentement au fil des millénaires.
-Il est avéré qu'à cause de ce principe, la durée de vie des océans est limitée aux environs de 270 millions d'années.
+Le temps est l'élément fondamental de la géologie car même les roches les plus dures se déformeront comme de la pâte à modeler si elles sont soumises à une force puissante dans le même sens pendant plusieurs dizaines de milliers d'années. C'est d'ailleurs pour cela qu'on utilise de la pâte à modeler dans les modélisations géologiques à petite échelle.\\
+En effet, sur les échelles immenses qui sont celles des temps géologiques, n'importe quel matériau se comportera comme s'il était mou.\\
+Par exemple, une montagne, sous certaines conditions, peut se transformer en colline en seulement quelques millions d'années.\\
+Autre exemple, la « mort des océans », dûe à la lithosphère océanique qui, étant plus dense que la croûte continentale, se refroidit et s'alourdit lentement au fil des millénaires.\\
+Il est avéré qu'à cause de ce principe, la durée de vie des océans est limitée à environ 270 millions d'années.\\
 Les océans suivent donc un cycle de naissance, vie et de mort qui est directement à la source de la plupart des mécanismes orogéniques. 
+
+\subsection{Dynamique des roches}
+	
+Les physiciens ont grandement fait avancer la géologie modernes grâce aux roches car la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme des déformations à petite échelle.
+En effet, les roches, bien qu'usuellement cassantes et rigides, peuvent devenir plus ductiles sous certaines conditions. \\
 
 \subsubsection{La température}
 
-Plus il fait chaud, plus une roche est fluide.
-C'est le cas à toutes les températures, ainsi, l'aspect « pâte à modeler » des roches est accentué en profondeur par la chaleur qui les rend plus malléables.
-Cela se ressens également sur les séismes~: il existe une limite assez floue mais bien réelle qui sépare les séismes cassants, qui se déplacent brusquement à intervalle régulier, des séismes coulissant, où les roches supportent leur déformation progressive en coulissant entre elles comme des fluides très visqueux.
+Plus il fait chaud, plus une roche est fluide.\\
+C'est le cas pour toutes les roches ; ainsi, l'aspect « pâte à modeler » des roches est accentué en profondeur par la chaleur qui les rend plus malléables.\\
+Cela se ressent sur les séismes~: il existe une limite assez floue mais bien réelle qui sépare les séismes cassants, qui se déplacent brusquement à intervalle régulier, des séismes coulissant, où les roches supportent leur déformation progressive en coulissant entre elles comme des fluides très visqueux.
 
 \subsubsection{La pression}
 
 Un facteur auquel nous pensons rarement en premier mais qui est en réalité tout aussi important que les autres.
-La pression des grandes profondeurs empêche les roches de devenir liquides trop rapidement au fur et à mesure qu'elles s'enfoncent.
-A l'inverse, une brusque remontée de roche des profondeurs, comme c'est le cas avec les volcans par exemple les font fondre et augmentent plus encore la pression qu'ils exerçant sur le « toit » (c'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hauteur, s'infiltrant par les failles, puis que c'est alors au tour du gaz de fournir la pression nécessaire à l'expulsion du magma).
+En effet, la pression des grandes profondeurs empêche les roches de devenir liquides trop rapidement au fur et à mesure qu'elles s'enfoncent.\\
+A l'inverse, une brusque remontée de roche des profondeurs, comme c'est le cas avec les volcans par exemple, les font fondre et augmentent plus encore la pression qu'ils exerçant sur le « toit ».\\
+C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hauteur, s'infiltrant par les failles, puis que c'est alors au tour du gaz de fournir la pression nécessaire à l'expulsion du magma.
 
 \section{La simulation}
 
 \subsection{Modéliser un paysage géologique}
 
-Il y a beaucoup de moyens de simuler certains comportements dynamiques en géologiques.
-Beaucoup font appel à l'expérience physique, et quelques uns, plus ou moins récents (nous avons déterrés des thèses remontant jusqu'aux années 90) font usage exclusif du numérique.
-Bien que pour les besoins de notre simulation et pour rester cohérents avec notre objectif de montrer dynamiquement un système géomorphologique nous avons choisis cette seconde voie.
-Il est important de faire justice aux autre expériences, tant numériques que physiques qui nous ont inspirées dans la réalisation de notre simulation.
+Il y a beaucoup de moyens de simuler certains comportements dynamiques en géologie.\\
+Beaucoup font appel à une expérience physique et quelques unes, plus ou moins récentes, font exclusivement usage du numérique.\\
+Pour rester cohérents avec notre problématique et notre objectif, nous avons choisi cette seconde voie.
 
 \subsubsection{Les simulations physiques}
 
-\paragraph{Simulation par pâtes.}
+\paragraph{Simulation par pâtes}
 
 Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile ou tout autre pâtes ductiles colorées.
 Ces différentes couches sont soigneusement empilées et leurs propriétés sont choisies avec soin de sorte à faire l'analogie avec les couches géologiques d'un paysage réel.
@@ -494,6 +493,17 @@ Une en particulier a retenu notre attention entre les simulation des mouvements 
 Cette simulation simulait une subduction grâce à des automates cellulaires, et ces automates grâce à un algorithme se réagençaient à chaque pas de la simulation, évoluant et se plissant.
 C'est notamment de là que nous viens l'idée d'avoir utilisé des cellules indépendantes.
 Cette simulation était assez convaincante visuellement, mais fondamentalement très biaisée car le mouvement des cellules de la première plaque était artificiellement forcé vers la bas pour un meilleur rendu visuel, de sorte que l'apparence primait généralement sur le réalisme physique de la simulation.
+
+\paragraph{Simulation par voxels}
+
+La simulation par voxels, particulièrement utile pour l'érosion, consiste à créer un terrain exclusivement composé de « cubes », de points alignés sur un quadrillage en deux ou trois dimensions de coordonnées discrètes.
+Habituellement, les données de traitement numérique de rendu utilisent des points, reliés entre eux par des traits formant des triangles qui sont ensuite utilisés pour rendre les formes en perspectives.
+Mais les voxels créent des terrains uniquement composés de cubes, les boxels, représentation 3D des voxels de sorte qu'ils remplissent l'espace autour d'eux de la largeur d'une unité du système discret.
+L'avantage de ce système, pas évident au premier abord est que l'ordinateur ayant du mal avec les nombres à virgule (et pas seulement du point de vue physique, car il devient bien plus rapide pour effectuer des opérations simples comme rechercher une cellule adjacente dans le maillage, en supprimer, optimiser l'affichage en fonction de la présence ou non de cellules autour de nous, ou encore de rechercher supprimer des éléments.
+De plus, ce système offre l'avantage de permettre de changer assez facilement la résolution des boxels.
+En effet, on peut les simplifier à l'affichage (et les calculs en général) les concernant en les rendant plus gros, ce qui allège la tâche de la carte graphique, et l'opération inverse, moyennant un algorithme d'interpolation assez simple permet d'augmenter sans des efforts d'algorithmique importants la résolution système.
+De plus, de même que dans les images en deux dimensions la plus petite unité considérée est le pixel, le boxel est son équivalent en 3D, ce qui implique que les algorithmes de compression classiques des images 2D (type png, jpeg, gif) moyennant des modifications mineurs peuvent s'appliquer sur des portions ou la totalité d'un terrain ainsi généré, permettant une économie de mémoire énorme.
+C'est pour toutes ces raisons qu'un modèle d'érosion intelligent basé sur un automate cellulaire 3D permettrait de simuler avec une grande précision un paysage de type alpin, tout en économisant beaucoup de mémoire (moyennant quelques optimisations).
 
 \subsection{Les Cellules}
 \subsubsection{Définition d'une cellule}
