Début de modification de la simulation physique

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -461,16 +461,16 @@ C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hau
 \subsection{Modéliser un paysage géologique}
 
 Il y a beaucoup de moyens de simuler certains comportements dynamiques en géologie.\\
-Beaucoup font appel à une expérience physique et quelques unes, plus ou moins récentes, font exclusivement usage du numérique.\\
+La plupart font appel à une expérience physique mais quelques unes, plus ou moins récentes, font exclusivement usage du numérique.\\
 Pour rester cohérents avec notre problématique et notre objectif, nous avons choisi cette seconde voie.
 
 \subsubsection{Les simulations physiques}
 
 \paragraph{Simulation par pâtes}
 
-Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile ou tout autre pâtes ductiles colorées.
+Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile ou tout autre pâte ductile colorée.
 Ces différentes couches sont soigneusement empilées et leurs propriétés sont choisies avec soin de sorte à faire l'analogie avec les couches géologiques d'un paysage réel.
-Ces simulations, bien que limités, arrivent à simuler des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
+Ces simulations, bien que limitées, arrivent à simuler des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
 La plupart des simulations, encore aujourd'hui, et ce par souci de rapidité et de réalisme, modélisent des phénomènes très précis (pour réduire la complexité de la mise en œuvre, conformément à la méthode scientifique) en utilisant des propriétés physiques.
 Ils simulent souvent les phénomènes de compression et donc de plissement par différentes couches successives de pâte à modeler de consistance et de propriétés différentes pour simuler les phénomènes observés dans la nature.
 La collision de la plaque indienne avec la plaque euro-asiatique a ainsi reçu une illustration réaliste grâce à un pressoir en métal (représentant l'inde) s'enfonçant dans de la pâte à modeler (représentant l'Asie).
