Ajout des images d'Alexis.

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -401,7 +401,7 @@ Une subduction survient généralement quand une plaque océanique vieillissante
 De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et des traces de subductions se trouvent aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
 
 \begin{center}
-  \includegraphics[width=8cm]{Images/subduction.png}
+  \includegraphics[width=8cm]{Images/subduction_2.png}
 \end{center}
 \captionof{figure}{Schéma de la subduction entre deux plaques tectoniques.}
 
@@ -477,9 +477,10 @@ La collision de la plaque indienne avec la plaque euro-asiatique a ainsi reçu u
 D'autre simulation du même genre mettent en valeur certains types de plis, plis couchés, plis droits et autre. Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
 
 \begin{center}
-  \includegraphics[width=8cm]{Images/simulation_physique.png}
+  \includegraphics[width=6.2cm]{Images/simulation_physique.png}
+  \includegraphics[width=4cm, angle=90]{Images/inde.jpg}
 \end{center}
-\captionof{figure}{Photo de simulation physique par couches de pâtes.}
+\captionof{figure}{A droite~: Photo de simulation physique par couches de pâtes. A gauche~: Photo de simulation par pâtes des indes.}
 
 \paragraph{La place de la physique dans la simulation.}
 
@@ -493,6 +494,15 @@ Une en particulier a retenu notre attention entre les simulation des mouvements 
 Cette simulation simulait une subduction grâce à des automates cellulaires, et ces automates grâce à un algorithme se réagençaient à chaque pas de la simulation, évoluant et se plissant.
 C'est notamment de là que nous viens l'idée d'avoir utilisé des cellules indépendantes.
 Cette simulation était assez convaincante visuellement, mais fondamentalement très biaisée car le mouvement des cellules de la première plaque était artificiellement forcé vers la bas pour un meilleur rendu visuel, de sorte que l'apparence primait généralement sur le réalisme physique de la simulation.
+
+\begin{center}
+  \includegraphics[width=8cm]{Images/3100_cell.png}
+\end{center}
+\captionof{figure}{Images d'une simulation par automates cellulaire bidimensionnelle à 3100 itérations.}
+\begin{center}
+  \includegraphics[width=8cm]{Images/7100_cell.png}
+\end{center}
+\captionof{figure}{Images d'une simulation par automates cellulaire bidimensionnelle à 7100 itérations.}
 
 \paragraph{Simulation par voxels}
 
